--- a/wTheme/src/_header.scss
+++ b/wTheme/src/_header.scss
@@ -1,6 +1,36 @@
-header{
-    background: $light;
-    height: 100px;
-    width: 100%;
-    box-shadow: 0px 0px 20px rgba(194,0,255,0.24);
+header {
+  background: $light;
+  padding: 1rem 1rem;
+  box-shadow: 0px 0px 20px rgba(0, 0, 255, 0.24);
+
+  .logo {
+    width: 150px;
+    display: inline;
+  }
+
+  .top-menu {
+    margin: 0;
+
+    display: none;
+
+    @media screen and (min-width: 800px) {
+      display: flex;
+    }
+    li {
+      list-style-type: none;
+      a {
+        text-decoration: none;
+        padding: 0.2rem 0.5rem;
+        margin: 0.5rem;
+        display: block;
+        color: $darkBlue;
+        background-color: $blue;
+        border-radius: 12%;
+      }
+      a :hover {
+        color: $blue;
+        background-color: $darkBlue;
+      }
+    }
+  }
 }
