--- a/wTheme/src/app.scss
+++ b/wTheme/src/app.scss
@@ -1,3 +1,47 @@
-@import 'node_modules/bootstrap/scss/bootstrap';
-@import 'colors';
-@import 'header';
+@import "node_modules/bootstrap/scss/bootstrap";
+@import "colors";
+@import "header";
+@import "footer";
+
+#hero {
+  height: 200px;
+  @media screen and (min-width: 800) {
+    height: 300px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 400px;
+  }
+  width: 100%;
+  background: url("images/hero-img.jpg") #f0f0f0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  .heroH1 {
+    color: $light;
+  }
+}
+
+.mainContainer {
+  padding: 2rem 0;
+}
+
+.content {
+  height: 1000px;
+}
+
+.widget {
+  list-style-type: none;
+  margin: 0;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+
+  li {
+    list-style-type: none;
+    a {
+      text-decoration: none;
+      color: $darkBlue;
+    }
+  }
+}
