--- a/wTheme/src/app.scss
+++ b/wTheme/src/app.scss
@@ -3,10 +3,14 @@
 @import "header";
 @import "footer";
 
-#hero {
+#hero,
+#wooHero {
   height: 200px;
   @media screen and (min-width: 800) {
     height: 300px;
+  }
+  @media screen and (min-width: 1000px) {
+    height: 350px;
   }
   @media screen and (min-width: 1200px) {
     height: 400px;
@@ -17,9 +21,28 @@
   background-size: cover;
   background-position: center;
 
-  .heroH1 {
-    color: $light;
+  color: #fff;
+  // Hero Sidebar
+  .navbar {
+    font-size: 2rem;
+    border: 5px solid red;
+    display: none;
+    @media screen and (min-width: 1000px) {
+      display: flex;
+      height: 350px;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      height: 400px;
+    }
   }
+}
+.dropdown-menu {
+  min-width: 55rem;
+}
+.dropdown-menu[data-bs-popper] {
+  left: 5rem;
+  margin-top: -1rem;
 }
 
 .mainContainer {
@@ -34,7 +57,7 @@
   list-style-type: none;
   margin: 0;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 0.5rem;
+  // border-radius: 0.5rem;
   padding: 1.5rem;
 
   li {
@@ -58,4 +81,18 @@
 }
 .page-numbers {
   padding: 0.5rem;
+}
+
+// woocommerce
+.wooActNav {
+  li {
+    list-style-type: none;
+    a {
+      text-decoration: none;
+      padding: 0;
+      /* top | right | bottom | left */
+      margin: 0rem 0.5rem 0rem 0.5rem;
+      color: $darkBlue;
+    }
+  }
 }
