--- a/wTheme/app.css
+++ b/wTheme/app.css
@@ -11309,20 +11309,20 @@ header .logo {
   width: 150px;
   display: inline;
 }
-header .top-menu {
+header .topmenu {
   padding: 1rem;
   margin: 0;
   display: none;
 }
 @media screen and (min-width: 800px) {
-  header .top-menu {
+  header .topmenu {
     display: flex;
   }
 }
-header .top-menu li {
+header .topmenu li {
   list-style-type: none;
 }
-header .top-menu li a {
+header .topmenu li a {
   text-decoration: none;
   padding: 0.2rem 0.5rem;
   margin: 0.5rem;
@@ -11331,7 +11331,7 @@ header .top-menu li a {
   background-color: #64c9cf;
   border-radius: 12%;
 }
-header .top-menu li a :hover {
+header .topmenu li a :hover {
   color: #64c9cf;
   background-color: #334257;
 }
@@ -11412,10 +11412,18 @@ footer {
   height: 1000px;
 }
 
+.caretRight {
+  border-left: 10px solid;
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid transparent;
+  display: inline-block;
+}
+
 .widget {
   list-style-type: none;
   margin: 0;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 0.5rem;
   padding: 1.5rem;
 }
 .widget li {
