--- a/wTheme/src/app.scss
+++ b/wTheme/src/app.scss
@@ -52,12 +52,17 @@
 .content {
   height: 1000px;
 }
-
+.caretRight {
+  border-left: 10px solid;
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid transparent;
+  display: inline-block;
+}
 .widget {
   list-style-type: none;
   margin: 0;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-  // border-radius: 0.5rem;
+  border-radius: 0.5rem;
   padding: 1.5rem;
 
   li {
